--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,8 @@ pytz==2025.2
 requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.3
-validate-email==1.3
+validate_email==1.3
 whitenoise==6.7.0
